# HKD

./: .gitignore  Body.cpp  Body.h  CMakeLists.txt  CWorld.cpp  CWorld.h  Intersections.cpp  Intersections.h  README.md  Shape.cpp  Shape.h  ShapeSphere.cpp  ShapeSphere.h  TestClass.cpp  TestClass.h  camera.cpp  camera.h  collision.cpp  collision.h  game.cpp  game.h  hkd_interface.h  imgui.ini  input.cpp  input.h  iqm_loader.cpp  iqm_loader.h  irender.h  main.cpp  map_parser.h  physics.cpp  physics.h  platform.cpp  platform.h  polysoup.cpp  polysoup.h  r_common.cpp  r_common.h  r_gl.cpp  r_gl.h  (+15 more)
assets/maps/: room.map
assets/models/icosphere/: icosphere.blend  icosphere.iqm  icosphere_high_res.iqm  icosphere_high_res_blender369.iqm  icosphere_low_res.blend  icosphere_low_res.iqm
assets/models/multiple_anims/: multiple_anims.iqm
assets/shaders/: basic.frag  basic.vert  colliders.frag  colliders.vert  entities.frag  entities.vert  final.frag  final.vert
shaders/: entities.frag  entities.vert  primitives.frag  primitives.vert
